--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ build-frontend:
     - docker pull $DOCKER_HUB_USER/gces-frontend:build-frontend
   script:
     - docker build -f ./frontend/Dockerfile -t $DOCKER_HUB_USER/gces-frontend:build-frontend ./frontend
+    # Publish on Docker Hub
     - docker push $DOCKER_HUB_USER/gces-frontend:build-frontend
   after_script:
     - echo "Frontend built successfully..."
@@ -33,6 +34,7 @@ build-backend:
     - docker pull $DOCKER_HUB_USER/gces-backend:build-backend
   script:
     - docker build -f ./backend/Dockerfile -t $DOCKER_HUB_USER/gces-backend:build-backend ./backend
+    # Publish on Docker Hub
     - docker push $DOCKER_HUB_USER/gces-backend:build-backend
   after_script:
     - echo "Backend built successfully..."
