Fix non updated name

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ build-backend:
   stage: build
   before_script:
     - echo "BUILDING BACKEND..."
-    - echo "$DOCKER_HUB_PASS" | docker login -username $DOCKER_HUB_USERNAME --password-stdin
+    - echo "$DOCKER_HUB_PASSWORD" | docker login -username $DOCKER_HUB_USERNAME --password-stdin
   script:
     - docker build -f ./backend/Dockerfile -t $DOCKER_HUB_USERNAME/gces-backend:build-backend ./backend
     # Publish on Docker Hub
